--- a/app/css/chartist.css
+++ b/app/css/chartist.css
@@ -1,15 +1,6 @@
-body {
-  background-color: #1ba6be;
-  color: white;
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  text-align: center; }
-
-/*
- * Chartist
- */
 .ct-label {
-  fill: rgba(255, 255, 255, 0.4);
-  color: rgba(255, 255, 255, 0.4);
+  fill: rgba(0, 0, 0, 0.4);
+  color: rgba(0, 0, 0, 0.4);
   font-size: 0.75rem;
   line-height: 1; }
 
@@ -152,12 +143,12 @@ body {
   text-anchor: end; }
 
 .ct-grid {
-  stroke: rgba(255, 255, 255, 0.2);
+  stroke: rgba(0, 0, 0, 0.2);
   stroke-width: 1px;
   stroke-dasharray: 2px; }
 
 .ct-point {
-  stroke-width: 8px;
+  stroke-width: 10px;
   stroke-linecap: round; }
 
 .ct-line {
@@ -177,10 +168,10 @@ body {
   stroke-width: 60px; }
 
 .ct-series-a .ct-point, .ct-series-a .ct-line, .ct-series-a .ct-bar, .ct-series-a .ct-slice-donut {
-  stroke: #fe9804; }
+  stroke: #d70206; }
 
 .ct-series-a .ct-slice-pie, .ct-series-a .ct-area {
-  fill: #fe9804; }
+  fill: #d70206; }
 
 .ct-series-b .ct-point, .ct-series-b .ct-line, .ct-series-b .ct-bar, .ct-series-b .ct-slice-donut {
   stroke: #f05b4f; }
