--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -4,6 +4,10 @@ body {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   text-align: center; }
 
+.chart {
+  width: 50%;
+  margin: auto; }
+
 /*
  * Chartist
  */
