--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,19 +1,117 @@
+/*@font-face {
+    font-family: 'komika_axisregular';
+    src: url('../fonts/KOMIKAX_-webfont.eot');
+    src: url('../fonts/KOMIKAX_-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/KOMIKAX_-webfont.woff') format('woff'),
+         url('../fonts/KOMIKAX_-webfont.ttf') format('truetype'),
+         url('../fonts/KOMIKAX_-webfont.svg#komika_axisregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}*/
+@import url(https://fonts.googleapis.com/css?family=Chewy);
+@import url(https://fonts.googleapis.com/css?family=Boogaloo);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:200,400,500,600);
+@import url(https://fonts.googleapis.com/css?family=Share+Tech);
 body {
   background-color: #1ba6be;
   color: white;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   text-align: center; }
 
-.chart {
-  width: 50%;
-  margin: auto; }
+.container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%; }
+
+/**
+ * CSS3 Thermometer
+ */
+.rim {
+  margin: 10px 20px;
+  padding: 15px;
+  border-radius: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: transparent; }
+  .rim div {
+    border-radius: 100%; }
+
+.inset {
+  padding: 15px;
+  box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
+  background: #df3341;
+  /*background: linear-gradient(to left, #df3341 0%, #fe9804 25%, #d4f355 66%,#1ba6be 100%);*/
+  background: -webkit-linear-gradient(right, #fe9804 0%, #d4f355 50%, #1ba6be 100%);
+  background: linear-gradient(to left, #fe9804 0%, #d4f355 50%, #1ba6be 100%); }
+
+.emboss {
+  padding: 10px;
+  box-shadow: inset 0 2px 2px rgba(255, 255, 255, 0.4), 0 3px 13px rgba(0, 0, 0, 0.85);
+  background: #f2f6f5;
+  background: -webkit-linear-gradient(top, #f2f6f5 0%, #cbd5d6 100%);
+  background: linear-gradient(to bottom, #f2f6f5 0%, #cbd5d6 100%); }
+
+.dent {
+  padding: 10px;
+  width: 140px;
+  height: 140px;
+  vertical-align: middle;
+  background: #cbd5d6;
+  background: -webkit-linear-gradient(bottom, #f2f6f5 0%, #cbd5d6 100%);
+  background: linear-gradient(to top, #f2f6f5 0%, #cbd5d6 100%);
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d; }
+
+.content {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  margin: auto;
+  color: #555;
+  text-shadow: 1px 1px 1px white;
+  font-family: 'Share Tech';
+  font-size: 60px;
+  font-weight: 500;
+  text-align: center; }
+  .content span {
+    font-size: 30px;
+    font-weight: 300; }
+  .content strong {
+    position: absolute;
+    right: 40px;
+    top: 0;
+    font-size: 22px;
+    font-weight: bold; }
+  .content div.label {
+    line-height: 20px;
+    font-size: 16px;
+    font-weight: 300; }
 
 /*
  * Chartist
  */
+.chart {
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 100%;
+  padding: 20px; }
+
+.ct-series-a .ct-point, .ct-series-a .ct-line, .ct-series-a .ct-bar, .ct-series-a .ct-slice-donut {
+  stroke: url(#gradient) !important; }
+
+.ct-series-a .ct-slice-pie, .ct-series-a .ct-area {
+  fill: url(#gradient) !important; }
+
 .ct-label {
-  fill: rgba(255, 255, 255, 0.4);
-  color: rgba(255, 255, 255, 0.4);
+  fill: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.8);
   font-size: 0.75rem;
   line-height: 1; }
 
