--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,3 +1,7 @@
+@import "_fonts";
+
+
+
 body {
   background-color: #1ba6be;
   color: white;
@@ -5,14 +9,101 @@ body {
   text-align: center;
 }
 
-.chart {
-  width: 50%;
+.container {
+  display: flex;
+  width: 100%;
+}
+
+/**
+ * CSS3 Thermometer
+ */
+
+.rim {
+  margin: 10px 20px;
+  padding: 15px;
+  border-radius: 100%;
+  display: flex;
+  background-color: transparent;
+  
+  div {
+    border-radius: 100%;
+  }
+}
+
+.inset {
+  padding: 15px;
+  box-shadow: inset 0 2px 10px rgba(0, 0, 0, .5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
+  background: #df3341;
+  /*background: linear-gradient(to left, #df3341 0%, #fe9804 25%, #d4f355 66%,#1ba6be 100%);*/
+  background: linear-gradient(to left, #fe9804 0%, #d4f355 50%,#1ba6be 100%);
+}
+
+.emboss {
+  padding: 10px;
+  box-shadow: inset 0 2px 2px rgba(255, 255, 255, .4), 0 3px 13px rgba(0, 0, 0, .85);
+  background: #f2f6f5;
+  background: linear-gradient(to bottom, #f2f6f5 0%, #cbd5d6 100%);
+}
+
+.dent {
+  padding: 10px;
+  width: 140px;
+  height: 140px;
+  vertical-align: middle;
+  background: #cbd5d6;
+  background: linear-gradient(to top, #f2f6f5 0%, #cbd5d6 100%);
+  transform-style: preserve-3d;
+}
+
+.content {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
   margin: auto;
+  color: #555;
+  text-shadow: 1px 1px 1px white;
+  font-family: 'Share Tech';
+  font-size: 60px;
+  font-weight: 500;
+  text-align: center;
+  
+  span {
+    font-size: 30px;
+    font-weight: 300;
+  }
+  
+  strong {
+    position: absolute;
+    right: 40px;
+    top: 0;
+    font-size: 22px;
+    font-weight: bold;
+  }
+  
+  div.label {
+    line-height: 20px;
+    font-size: 16px; font-weight: 300;
+  }
 }
 
 /*
  * Chartist
  */
+
+.chart {
+  display: inline-flex;
+  width: 100%;
+  padding: 20px;
+}
+
+.ct-series-a {
+  .ct-point, .ct-line, .ct-bar, .ct-slice-donut {
+    stroke: url(#gradient) !important;
+  }
+  .ct-slice-pie, .ct-area {
+    fill: url(#gradient) !important;
+  }
+}
 
 @import "_chartist-settings";
 @import "../../node_modules/chartist/dist/scss/chartist.scss";
