--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -41,24 +41,15 @@ body {
 /**
  * CSS3 Thermometer
  */
-.rim {
-  margin: 10px 20px;
-  padding: 15px;
-  border-radius: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: transparent; }
-  .rim div {
-    border-radius: 100%; }
-
-.inset {
+.display {
+  margin: 25px 20px;
   padding: 15px;
   box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
   background: #df3341;
   background: -webkit-linear-gradient(right, #fe9804 0%, #d4f355 50%, #1ba6be 100%);
   background: linear-gradient(to left, #fe9804 0%, #d4f355 50%, #1ba6be 100%); }
+  .display, .display div {
+    border-radius: 100%; }
 
 .emboss {
   padding: 10px;
@@ -116,10 +107,10 @@ body {
   padding: 20px; }
 
 .ct-series-a .ct-point, .ct-series-a .ct-line, .ct-series-a .ct-bar, .ct-series-a .ct-slice-donut, .ct-series-b .ct-point, .ct-series-b .ct-line, .ct-series-b .ct-bar, .ct-series-b .ct-slice-donut {
-  stroke: url(#gradient) !important; }
+  stroke: url(#line-gradient) !important; }
 
 .ct-series-a .ct-slice-pie, .ct-series-a .ct-area, .ct-series-b .ct-slice-pie, .ct-series-b .ct-area {
-  fill: url(#gradient) !important; }
+  fill: url(#line-gradient) !important; }
 
 .ct-label {
   fill: rgba(255, 255, 255, 0.8);
