--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -28,23 +28,16 @@ body {
  * CSS3 Thermometer
  */
 
-.rim {
-  margin: 10px 20px;
-  padding: 15px;
-  border-radius: 100%;
-  display: flex;
-  background-color: transparent;
-  
-  div {
-    border-radius: 100%;
-  }
-}
-
-.inset {
+.display {
+  margin: 25px 20px;
   padding: 15px;
   box-shadow: inset 0 2px 10px rgba(0, 0, 0, .5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
   background: #df3341;
   background: linear-gradient(to left, #fe9804 0%, #d4f355 50%,#1ba6be 100%);
+  
+  &, div {
+    border-radius: 100%;
+  }
 }
 
 .emboss {
@@ -107,10 +100,10 @@ body {
 
 .ct-series-a, .ct-series-b {
   .ct-point, .ct-line, .ct-bar, .ct-slice-donut {
-    stroke: url(#gradient) !important;
+    stroke: url(#line-gradient) !important;
   }
   .ct-slice-pie, .ct-area {
-    fill: url(#gradient) !important;
+    fill: url(#line-gradient) !important;
   }
 }
 
