--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -45,9 +45,8 @@ body {
   margin: 25px 20px;
   padding: 15px;
   box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
-  background: #df3341;
-  background: -webkit-linear-gradient(right, #fe9804 0%, #d4f355 50%, #1ba6be 100%);
-  background: linear-gradient(to left, #fe9804 0%, #d4f355 50%, #1ba6be 100%); }
+  background: #1ba6be;
+  /*background: linear-gradient(to left, #fe9804 0%, #d4f355 50%,#1ba6be 100%);*/ }
   .display, .display div {
     border-radius: 100%; }
 
