--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -16,33 +16,22 @@ body {
   background-color: #1ba6be;
   color: white;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  text-align: center; }
+  text-align: center;
+  margin: 0;
+  padding: 0; }
 
 .dashboard {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 100%; }
+  width: 100%;
+  margin: 0;
+  padding: 0; }
 
-/*
-.rim {
-  fill:url(#spectrum);
-  box-shadow: inset 0 2px 10px rgba(0, 0, 0, .5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
-}
-.button {
-  fill:url(#emboss);
-  box-shadow: inset 0 2px 2px rgba(255, 255, 255, .4), 0 3px 13px rgba(0, 0, 0, .85);
-}
-.dent {
-  fill:url(#impress);
-}
-*/
-/**
- * CSS3 Thermometer
- */
 .display {
   margin: 25px 20px;
+  width: 180px;
   padding: 15px;
   box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4); }
   .display, .display div {
@@ -56,9 +45,9 @@ body {
   background: linear-gradient(to bottom, #f2f6f5 0%, #cbd5d6 100%); }
 
 .dent {
-  padding: 10px;
   width: 140px;
   height: 140px;
+  padding: 10px;
   vertical-align: middle;
   background: #cbd5d6;
   background: -webkit-linear-gradient(bottom, #f2f6f5 0%, #cbd5d6 100%);
@@ -96,12 +85,15 @@ body {
  * Chartist
  */
 .chart {
-  display: -webkit-inline-box;
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  width: 100%;
-  padding: 20px; }
+  width: 650px;
+  margin: 20px; }
+
+/* bit of a hack maybe */
+#gradient-defs-svg {
+  position: absolute;
+  z-index: -1000;
+  left: 0;
+  right: 0; }
 
 .ct-series-a .ct-point, .ct-series-a .ct-line, .ct-series-a .ct-bar, .ct-series-a .ct-slice-donut, .ct-series-b .ct-point, .ct-series-b .ct-line, .ct-series-b .ct-bar, .ct-series-b .ct-slice-donut {
   stroke: url(#line-gradient) !important; }
@@ -724,3 +716,30 @@ body {
     position: absolute;
     top: 0;
     left: 0; }
+
+@media (max-width: 900px) {
+  .dashboard {
+    display: block;
+    width: 100%; }
+  .displays {
+    margin: auto;
+    display: block;
+    padding: 0; }
+  .display {
+    display: inline-block;
+    margin: 20px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+                -ms-grid-row-align: center;
+            align-items: center; }
+  .chart {
+    margin: 0;
+    padding: 0;
+    width: 100% !important; } }
+
+@media (max-width: 375px) {
+  .chart {
+    margin: 0;
+    padding: 0;
+    width: 95%; } }
