--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -5,31 +5,20 @@ body {
   color: white;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .dashboard {
   display: flex;
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
-/*
-.rim {
-  fill:url(#spectrum);
-  box-shadow: inset 0 2px 10px rgba(0, 0, 0, .5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
-}
-.button {
-  fill:url(#emboss);
-  box-shadow: inset 0 2px 2px rgba(255, 255, 255, .4), 0 3px 13px rgba(0, 0, 0, .85);
-}
-.dent {
-  fill:url(#impress);
-}
-*/
-/**
- * CSS3 Thermometer
- */
 
 .display {
   margin: 25px 20px;
+  width: 180px;
   padding: 15px;
   box-shadow: inset 0 2px 10px rgba(0, 0, 0, .5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
   
@@ -46,9 +35,9 @@ body {
 }
 
 .dent {
-  padding: 10px;
   width: 140px;
   height: 140px;
+  padding: 10px;
   vertical-align: middle;
   background: #cbd5d6;
   background: linear-gradient(to top, #f2f6f5 0%, #cbd5d6 100%);
@@ -91,9 +80,16 @@ body {
  */
 
 .chart {
-  display: inline-flex;
-  width: 100%;
-  padding: 20px;
+  width: 650px;
+  margin: 20px;
+}
+
+/* bit of a hack maybe */
+#gradient-defs-svg {
+  position: absolute;
+  z-index: -1000;
+  left: 0;
+  right: 0;
 }
 
 .ct-series-a, .ct-series-b {
@@ -107,3 +103,34 @@ body {
 
 @import "_chartist-settings";
 @import "../../node_modules/chartist/dist/scss/chartist.scss";
+
+
+@media (max-width: 900px) {
+  .dashboard {
+    display: block;
+    width: 100%;
+  }
+  .displays {
+    margin: auto;
+    display: block;
+    padding: 0;
+  }
+  .display {
+    display: inline-block;
+    margin: 20px;
+    align-items: center;
+  }
+  .chart {
+    margin: 0;
+    padding: 0;
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 375px) {
+  .chart {
+    margin: 0;
+    padding: 0;
+    width: 95%;
+  }
+}
