--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -31,11 +31,14 @@ body {
 
 .display {
   margin: 25px 20px;
-  width: 180px;
-  padding: 15px;
-  box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4); }
+  padding: 0; }
   .display, .display div {
     border-radius: 100%; }
+
+.alert {
+  box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
+  padding: 15px;
+  width: 180px; }
 
 .emboss {
   padding: 10px;
@@ -730,12 +733,14 @@ body {
     display: block;
     padding: 0; }
   .display {
-    display: inline-block;
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
     margin: 20px;
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
-                -ms-grid-row-align: center;
             align-items: center; }
   .chart {
     margin: 0;
