--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -18,13 +18,17 @@ body {
 
 .display {
   margin: 25px 20px;
-  width: 180px;
-  padding: 15px;
-  box-shadow: inset 0 2px 10px rgba(0, 0, 0, .5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
+  padding: 0;
   
   &, div {
     border-radius: 100%;
   }
+}
+
+.alert {
+  box-shadow: inset 0 2px 10px rgba(0, 0, 0, .5), -1px -1px 0px rgba(0, 0, 0, 0.3), 1px 1px 1px rgba(255, 255, 255, 0.4);
+  padding: 15px;
+  width: 180px;
 }
 
 .emboss {
@@ -120,7 +124,7 @@ body {
     padding: 0;
   }
   .display {
-    display: inline-block;
+    display: inline-flex;
     margin: 20px;
     align-items: center;
   }
