--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -20,6 +20,20 @@ body {
   margin: 0;
   padding: 0; }
 
+#warning {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 10px;
+  line-height: 2em;
+  background-color: rgba(0, 0, 0, 0.5); }
+  #warning img {
+    margin-right: 5px;
+    display: inline;
+    vertical-align: middle;
+    height: 2em; }
+
 .dashboard {
   display: -webkit-box;
   display: -webkit-flex;
