--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -26,6 +26,15 @@ body {
   }
 }
 
+#contact {
+  text-align: left;
+  padding: 2em;
+  background-size: contain;
+  background-image: url('http://paljubileet.fi/img/palm-gray-small.png');
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
 .dashboard {
   display: flex;
   width: 100%;
