Show outside temperature.

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -35,6 +35,10 @@ body {
   background-position: left;
 }
 
+#outside-temperature {
+  margin-top: 1em;
+}
+
 .dashboard {
   display: flex;
   width: 100%;
